--- a/contactenos.html
+++ b/contactenos.html
@@ -25,8 +25,8 @@
         <li>WORK</li>
         <li>PORTFOLIO</li>
         <li>SERVICES</li>
-        <li>CLIENTS</li>
-        <li>CONTACT</li>
+        <li>CLIENTES</li>
+        <li>CONTACTO</li>
       </ul>
     </nav>
   </header>
